# CV_aided_gripper_drone_payload_old

./: README.md  cameraup.service  up.service
samples/sample_c++/module_sample/aruco_location/: aruco_location.cpp  bottom_camera.cpp  bottom_camera.h
samples/sample_c++/module_sample/liveview/: test_liveview.hpp
samples/sample_c++/platform/linux/manifold2/: CMakeLists.txt
samples/sample_c++/platform/linux/manifold2/application/: application.cpp  main.cpp
samples/sample_c/module_sample/aruco_location/: aruco_location.c  aruco_location.h
samples/sample_c/module_sample/data_transmission/: test_data_transmission.c  test_data_transmission.h
samples/sample_c/module_sample/gripper/: gripper.h
samples/sample_c/platform/linux/manifold2/: CMakeLists.txt
samples/sample_c/platform/linux/manifold2/application/: dji_sdk_app_info.h  dji_sdk_config.h  gripper.c
samples/sample_c/platform/linux/manifold2/hal/: hal_network.h  hal_uart.h
test/: CMakeLists.txt  Makefile  arucoPos.cpp  bottom_camera.cpp  camera.py  get_aruco_location.cpp  getlocation  mcget.py
